# PDF2Muse

./: .gitignore  README.md  install-cli.bat  install-cli.sh  install.bat  install.sh  pyproject.toml  run-ui.bat  run-ui.sh  run.bat  run.sh  skills-lock.json  update.bat  update.sh
src/pdf2muse/: __init__.py  cli.py  core.py  musicxml.py  oemer_utils.py  ui.py
tests/: conftest.py  test_cli.py  test_core.py  test_pipeline.py  test_ui.py
