[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pdf2muse"
version = "2.0.0"
description = "Convert PDF sheet music to MusicXML and MuseScore formats using optical music recognition"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "TheDivergentAI", email = "info@thedivergentai.com"}
]
keywords = ["music", "optical-music-recognition", "musicxml", "musescore", "pdf"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Multimedia :: Sound/Audio",
]

dependencies = [
    "oemer>=0.1.8",
    "pdf2image>=1.16.0",
    "typer[all]>=0.9.0",
    "gradio>=4.0.0",
    "rich>=13.0.0",
    "Pillow>=10.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[project.scripts]
pdf2muse = "pdf2muse.cli:app"

[project.urls]
Homepage = "https://github.com/thedivergentai/PDF2Muse"
Repository = "https://github.com/thedivergentai/PDF2Muse"
Issues = "https://github.com/thedivergentai/PDF2Muse/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ['py39']

[tool.ruff]
line-length = 100
target-version = "py39"
